--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -136,6 +136,7 @@
     <Text Include="day1_input.txt" />
     <Text Include="day2_input.txt" />
     <Text Include="day3_input.txt" />
+    <Text Include="day4_input.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
