--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -34,5 +34,8 @@
     <Text Include="day3_input.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="day4_input.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
