--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -37,5 +37,8 @@
     <Text Include="day4_input.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="day5_input.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
