--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -139,6 +139,7 @@
     <Text Include="day4_input.txt" />
     <Text Include="day5_input.txt" />
     <Text Include="day6_input.txt" />
+    <Text Include="day7_input.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
