--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -46,5 +46,8 @@
     <Text Include="day7_input.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="day8_input.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
