--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -49,5 +49,8 @@
     <Text Include="day8_input.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="day10_input.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
