--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -55,5 +55,8 @@
     <Text Include="day10_input.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="day12_input.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
