--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <Text Include="day10_input.txt" />
     <Text Include="day12_input.txt" />
+    <Text Include="day15_input.txt" />
     <Text Include="day1_input.txt" />
     <Text Include="day2_input.txt" />
     <Text Include="day3_input.txt" />
