--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -137,6 +137,7 @@
     <Text Include="day10_input.txt" />
     <Text Include="day12_input.txt" />
     <Text Include="day15_input.txt" />
+    <Text Include="day16_input.txt" />
     <Text Include="day1_input.txt" />
     <Text Include="day2_input.txt" />
     <Text Include="day3_input.txt" />
