--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -61,5 +61,8 @@
     <Text Include="day15_input.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="day16_input.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
