--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -138,6 +138,7 @@
     <Text Include="day12_input.txt" />
     <Text Include="day15_input.txt" />
     <Text Include="day16_input.txt" />
+    <Text Include="day19_input.txt" />
     <Text Include="day1_input.txt" />
     <Text Include="day2_input.txt" />
     <Text Include="day3_input.txt" />
