--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -67,5 +67,8 @@
     <Text Include="day19_input.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="day22_input.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
