--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -141,6 +141,7 @@
     <Text Include="day19_input.txt" />
     <Text Include="day1_input.txt" />
     <Text Include="day22_input.txt" />
+    <Text Include="day24_input.txt" />
     <Text Include="day2_input.txt" />
     <Text Include="day3_input.txt" />
     <Text Include="day4_input.txt" />
