--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -70,5 +70,6 @@
     <Text Include="day22_input.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="day24_input.txt" />
   </ItemGroup>
 </Project>
