--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -71,5 +71,6 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="day24_input.txt" />
+    <Text Include="day25_input.txt" />
   </ItemGroup>
 </Project>
