--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -72,5 +72,6 @@
     </Text>
     <Text Include="day24_input.txt" />
     <Text Include="day25_input.txt" />
+    <Text Include="day23_input.txt" />
   </ItemGroup>
 </Project>
