--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -70,8 +70,17 @@
     <Text Include="day22_input.txt">
       <Filter>Resource Files</Filter>
     </Text>
-    <Text Include="day24_input.txt" />
-    <Text Include="day25_input.txt" />
-    <Text Include="day23_input.txt" />
+    <Text Include="day20_input.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="day23_input.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="day24_input.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="day25_input.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
