--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -155,6 +155,7 @@
     <Text Include="day7_input.txt" />
     <Text Include="day8_input.txt" />
     <Text Include="day9_input.txt" />
+    <Text Include="day17_input.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
