--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -88,5 +88,8 @@
     <Text Include="day18_input.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="day17_input.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
