--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>Default</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -136,6 +136,7 @@
   <ItemGroup>
     <Text Include="day10_input.txt" />
     <Text Include="day12_input.txt" />
+    <Text Include="day14_input.txt" />
     <Text Include="day15_input.txt" />
     <Text Include="day16_input.txt" />
     <Text Include="day18_input.txt" />
