day13 (solved in python, called from throuh c++ api)

--- a/AOC2022/AOC2022.vcxproj
+++ b/AOC2022/AOC2022.vcxproj
@@ -70,6 +70,14 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Users\Van Der Weerd\AppData\Local\Programs\Python\Python310\include</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);C:\Users\Van Der Weerd\AppData\Local\Programs\Python\Python310\libs</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Users\Van Der Weerd\AppData\Local\Programs\Python\Python310\include</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);C:\Users\Van Der Weerd\AppData\Local\Programs\Python\Python310\libs</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -136,6 +144,7 @@
   <ItemGroup>
     <Text Include="day10_input.txt" />
     <Text Include="day12_input.txt" />
+    <Text Include="day13_input.txt" />
     <Text Include="day14_input.txt" />
     <Text Include="day15_input.txt" />
     <Text Include="day16_input.txt" />
