--- a/AOC2022/AOC2022.vcxproj.filters
+++ b/AOC2022/AOC2022.vcxproj.filters
@@ -94,5 +94,6 @@
     <Text Include="day14_input.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="day13_input.txt" />
   </ItemGroup>
 </Project>
